Upload: package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xte-id-|-x-tech-engineering",
+  "name": "sperada-9-e-class-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
